--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
 							<h1>Quang &amp; Linh</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
 					</div>
 				</div>
@@ -128,9 +127,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<h3>April 30th, 2019</h3>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
