--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Wedding</h2>
+					<h2>Wedding Time</h2>
 					<h3>April 30th, 2019</h3>
 				</div>
 			</div>
