--- a/gallery.html
+++ b/gallery.html
@@ -80,25 +80,13 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
 						<li class="has-dropdown active">
 							<a href="gallery.html">Gallery</a>
 							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
+								<li><a href="#">Engagement</a></li>
+								<li><a href="#">Marriage</a></li>
 							</ul>
 						</li>
-						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -158,7 +146,6 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Memories</span>
 					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -168,7 +155,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
 						<a href="images/gallery-1.jpg">
 							<div class="case-studies-summary">
-								<span>14 Photos</span>
 								<h2>Two Glas of Juice</h2>
 							</div>
 						</a>
@@ -176,7 +162,6 @@
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 						<a href="#" class="color-2">
 							<div class="case-studies-summary">
-								<span>30 Photos</span>
 								<h2>Timer starts now!</h2>
 							</div>
 						</a>
@@ -186,7 +171,6 @@
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
 						<a href="#" class="color-3">
 							<div class="case-studies-summary">
-								<span>90 Photos</span>
 								<h2>Beautiful sunset</h2>
 							</div>
 						</a>
@@ -194,7 +178,6 @@
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
 						<a href="#" class="color-4">
 							<div class="case-studies-summary">
-								<span>12 Photos</span>
 								<h2>Company's Conference Room</h2>
 							</div>
 						</a>
@@ -203,7 +186,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-									<span>50 Photos</span>
 									<h2>Useful baskets</h2>
 								</div>
 							</a>
@@ -211,7 +193,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>45 Photos</span>
 									<h2>Skater man in the road</h2>
 								</div>
 							</a>
@@ -220,7 +201,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>35 Photos</span>
 									<h2>Two Glas of Juice</h2>
 								</div>
 							</a>
@@ -229,7 +209,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
-									<span>90 Photos</span>
 									<h2>Timer starts now!</h2>
 								</div>
 							</a>
@@ -237,7 +216,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
-									<span>56 Photos</span>
 									<h2>Beautiful sunset</h2>
 								</div>
 							</a>
