--- a/index.html
+++ b/index.html
@@ -83,13 +83,10 @@
 						<li class="has-dropdown">
 							<a href="gallery.html">Gallery</a>
 							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
+								<li><a href="#">Engagement</a></li>
+								<li><a href="#">Marriage</a></li>
 							</ul>
 						</li>
-						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
