--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 						<li class="has-dropdown">
 							<a href="gallery.html">Gallery</a>
 							<ul class="dropdown">
-								<li><a href="#">Engagement</a></li>
-								<li><a href="#">Marriage</a></li>
+								<li><a href="engagement.html">Engagement</a></li>
+								<li><a href="marriage.html">Marriage</a></li>
 							</ul>
 						</li>
 					</ul>
