--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">Story</a></li>
 						<li class="has-dropdown">
-							<a href="gallery.html">Gallery</a>
+							<a>Gallery</a>
 							<ul class="dropdown">
 								<li><a href="engagement.html">Engagement</a></li>
 								<li><a href="marriage.html">Marriage</a></li>
