--- a/marriage.html
+++ b/marriage.html
@@ -80,8 +80,8 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown active">
-							<a href="gallery.html">Gallery</a>
+						<li class="has-dropdown">
+							<a>Gallery</a>
 							<ul class="dropdown">
 								<li><a href="engagement.html">Engagement</a></li>
 								<li><a href="marriage.html">Marriage</a></li>
